--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,12 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: write
+  security-events: write
+  actions: read
+  packages: write
+
 env:
   GO_VERSION: '1.21'
 
@@ -110,8 +116,6 @@ jobs:
     name: Create GitHub Release
     runs-on: ubuntu-latest
     needs: [test, build, security-scan]
-    permissions:
-      contents: write
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
