--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,44 +56,10 @@ jobs:
         version: latest
         args: --timeout=5m
         
-    - name: Run Gosec Security Scanner
-      uses: securego/gosec@master
-      with:
-        args: '-no-fail -fmt sarif -out gosec-results.sarif ./...'
-        
-    - name: Verify SARIF file exists (fallback)
+    - name: Security scan (gosec)
       run: |
-        echo "Current working directory: $(pwd)"
-        echo "Checking for SARIF file..."
-        if [ ! -f gosec-results.sarif ]; then
-          echo "SARIF file not found, creating minimal one..."
-          cat > gosec-results.sarif << 'EOF'
-        {
-          "version": "2.1.0",
-          "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/master/Schemata/sarif-schema-2.1.0.json",
-          "runs": [
-            {
-              "tool": {
-                "driver": {
-                  "name": "gosec",
-                  "version": "2.0.0"
-                }
-              },
-              "results": []
-            }
-          ]
-        }
-        EOF
-        fi
-        ls -la gosec-results.sarif
-        echo "SARIF file content:"
-        head -5 gosec-results.sarif
-        
-    - name: Upload gosec scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@v3
-      if: always()
-      with:
-        sarif_file: 'gosec-results.sarif'
+        go install github.com/securego/gosec/v2/cmd/gosec@latest
+        gosec ./... || echo "Gosec scan completed (findings may exist)"
         
     - name: Run unit tests
       run: make test-unit
@@ -136,14 +102,7 @@ jobs:
       uses: aquasecurity/trivy-action@master
       with:
         scan-type: 'fs'
-        format: 'sarif'
-        output: 'trivy-results.sarif'
-        
-    - name: Upload Trivy scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@v3
-      if: always()
-      with:
-        sarif_file: 'trivy-results.sarif'
+        format: 'table'
 
   dependency-review:
     name: Dependency Review
