fix(ci): resolve Go module cache conflicts in GitHub Actions
- Add Go version to cache keys for better isolation
- Include build cache path to improve performance
- Add pre-cache cleanup step to prevent file conflicts
- This fixes tar extraction errors from overlapping cache entries

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,12 +34,18 @@ jobs:
       with:
         go-version: ${{ matrix.go-version }}
         
+    - name: Clean Go module cache
+      run: go clean -modcache || true
+        
     - name: Cache Go modules
       uses: actions/cache@v4
       with:
-        path: ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        path: |
+          ~/go/pkg/mod
+          ~/.cache/go-build
+        key: ${{ runner.os }}-go-${{ matrix.go-version }}-${{ hashFiles('**/go.sum') }}
         restore-keys: |
+          ${{ runner.os }}-go-${{ matrix.go-version }}-
           ${{ runner.os }}-go-
           
     - name: Install dependencies
